# palantir-rag

./: .env.example  .gitignore  PROJECT_BRIEF.md  README.md  RETROSPECTIVE.md  pyproject.toml  requirements.txt
app/: bm25_index.py  chunking.py  config.py  generation.py  hyde.py  main.py  models.py  query_expansion.py  reranker.py  retrieval.py  vector_store.py
app/routers/: ingest.py  query.py
data/eval/: lotr_qa.json  lotr_qa.results.json
data/processed/lotr/: lotr_000.json  lotr_001.json  lotr_002.json  lotr_003.json  lotr_004.json  lotr_005.json  lotr_006.json  lotr_007.json  lotr_008.json  lotr_009.json  lotr_010.json  lotr_011.json  lotr_012.json  lotr_013.json  lotr_014.json  lotr_015.json  lotr_016.json  lotr_017.json  lotr_018.json  lotr_019.json  lotr_020.json  lotr_021.json  lotr_022.json  lotr_023.json  lotr_024.json  lotr_025.json  lotr_026.json  lotr_027.json  lotr_028.json  lotr_029.json  lotr_030.json  lotr_031.json  lotr_032.json  lotr_033.json  lotr_034.json  lotr_035.json  lotr_036.json  lotr_037.json  lotr_038.json  lotr_039.json  (+29 more)
data/processed/wiki/: wiki_aragorn.json  wiki_balrog.json  wiki_ents.json  wiki_frodo_baggins.json  wiki_gandalf.json  wiki_gimli_middle_earth.json  wiki_gondor.json  wiki_legolas.json  wiki_minas_tirith.json  wiki_mordor.json  wiki_mount_doom.json  wiki_rivendell.json  wiki_samwise_gamgee.json  wiki_saruman.json  wiki_sauron.json  wiki_shire.json  wiki_the_one_ring.json
scripts/: eval.py  fetch_wikipedia.py  parse_epub.py  test_chunking.py
