[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lotr-rag"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Step 1 - API layer
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic-settings>=2.2.0",
    # Step 2 - ingestion scripts
    "beautifulsoup4>=4.12.0",
    "Wikipedia-API>=0.6.0",
    # Step 3/4 - chunking + embeddings (local, no API key needed)
    "sentence-transformers>=3.0.0",
    # Step 4 - vector store
    "chromadb>=0.5.0",
    # Step 6 - generation
    "anthropic>=0.28.0",
    # Step 10 - OpenAI embeddings (optional, used when embedding_model = text-embedding-*)
    "openai>=1.0.0",
    # Step 8 - hybrid search
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",   # FastAPI test client needs this
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
